feat(upms): implement resource and role management